# athena-aiops-deep-agent

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  prd-athena.md  pyproject.toml  subagents.yaml
.beads/: issues.jsonl  metadata.json
athena/: __init__.py  __main__.py  app.py  config.py  models.py
athena/adapters/: aap2.py  kira.py  rocketchat.py
athena/agents/: pipeline.py  tools.py
athena/routes/: analyze.py  health.py  webhook.py
athena/services/: ingestion.py  submission.py
deploy/helm/athena/: Chart.yaml  values.yaml
docs/superpowers/plans/: 2026-04-15-athena-aiops-implementation.md  2026-04-16-athena-deployer-role.md  2026-04-17-problem-playbooks.md  2026-04-19-externalize-agent-config.md  2026-04-26-module3-sre-package-management.md  2026-04-27-module3-prewarm-domain-awareness.md
docs/superpowers/specs/: 2026-04-15-athena-aiops-design.md  2026-04-16-athena-deployer-role-design.md  2026-04-17-problem-playbooks-design.md  2026-04-19-externalize-agent-config-design.md  (+2 more)
skills/analyze-ansible-failure/: SKILL.md
skills/analyze-linux-failure/: SKILL.md
skills/analyze-networking-failure/: SKILL.md
skills/analyze-openshift-failure/: SKILL.md
skills/analyze-package-management/: SKILL.md
skills/create-ticket/: SKILL.md
skills/error-classifier/: SKILL.md
skills/review-ticket/: SKILL.md
templates/: ticket.md.j2
tests/: test_config.py  test_models.py
tests/e2e/: test_pipeline.py
tests/test_adapters/: test_aap2.py  test_kira.py  test_rocketchat.py
tests/test_services/: test_ingestion.py  test_submission.py
(+8 files in other folders)
